[gd_scene load_steps=9 format=3 uid="uid://duy765lkcg8n6"]

[ext_resource type="Script" path="res://Actors/shooting_enemy/shooting_enemy.gd" id="1_qnsgd"]
[ext_resource type="PackedScene" uid="uid://de4tofvvyfjlp" path="res://Actors/enemy_projectile/enemy_projectile.tscn" id="2_f6vn3"]
[ext_resource type="Texture2D" uid="uid://ce223q250sa3g" path="res://Actors/shooting_enemy/New Piskel (1).png" id="3_r80qj"]
[ext_resource type="Script" path="res://Actors/shooting_enemy/sprite_2d.gd" id="4_0yhhr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqv2t"]
size = Vector2(138, 138)

[sub_resource type="Animation" id="Animation_olwjr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_sdust"]
resource_name = "test"
length = 0.416675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ymbu3"]
_data = {
"RESET": SubResource("Animation_olwjr"),
"test": SubResource("Animation_sdust")
}

[node name="Shooting_Enemy" type="CharacterBody2D" groups=["Enemies", "shooter"]]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_qnsgd")
projectile_scene = ExtResource("2_f6vn3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yqv2t")

[node name="Gunshot_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="movetimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(8.11765, 8.11765)
texture = ExtResource("3_r80qj")
hframes = 2
vframes = 3
script = ExtResource("4_0yhhr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ymbu3")
}
autoplay = "test"

[connection signal="timeout" from="Gunshot_timer" to="." method="_on_gunshot_timer_timeout"]
[connection signal="timeout" from="movetimer" to="." method="_on_movetimer_timeout"]
